# adapter_design_pattern

./: README.md  pyproject.toml
adapter/: config_acess.py  main.py
before/: main.py
partial_adapter/: config_acess.py  experiment.py  main.py
